# ovo-local-llm

./: .gitignore  IDE.md  INTRO.md  LICENSE  README.ko.md  README.md  index.html  next_session_handover.md  next_session_handover.me  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
.github/: FUNDING.yml
docs/: ARCHITECTURE.en.md  ARCHITECTURE.md  LITELLM.md
docs/release/: BUILD.md  CHANGELOG.md  CONTRIBUTING.md  PRIVACY.md  README.md  RELEASE.md  SECURITY.md
public/catalog/: mlx-models.json
scripts/: bundle-sidecar-resources.sh  fetch-uv.sh  repackage-dmg-with-installer.sh
scripts/dmg-templates/: Install OVO.command
sidecar/: README.md  pyproject.toml
sidecar/scripts/: dev.sh
sidecar/src/ovo_sidecar/: audio_recorder.py  config.py  embedding_runner.py  hf_downloader.py  hf_scanner.py  main.py  mlx_diffusion_runner.py  mlx_runner.py  mlx_upscaler_runner.py  mlx_vlm_runner.py  model_lifecycle.py  registry.py  tool_grammar.py  tts_runner.py  whisper_runner.py
sidecar/src/ovo_sidecar/api/: finetune.py  ollama.py  openai.py  ovo.py  parsing.py
sidecar/src/ovo_sidecar/blending/: blend_runner.py
sidecar/src/ovo_sidecar/finetune/: adapter_manager.py  dataset_manager.py  lora_trainer.py  models.py
sidecar/src/ovo_sidecar/parsing/: chunker.py  dispatcher.py  kb_store.py  kordoc_installer.py  models.py  rag_retriever.py
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json  pet.json
src-tauri/icons/: icon.icns
tasks/: todo.md
(+137 files in other folders)
