[project]
name = "ovo-sidecar"
version = "0.0.1"
description = "OVO Python sidecar — FastAPI server exposing MLX LLM runtime"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "mlx-lm>=0.20.0",
    "mlx-vlm>=0.4.0",
    "huggingface-hub>=0.26.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "sse-starlette>=2.1.3",
    "httpx>=0.27.0",
    "tomli-w>=1.0.0",
    "rich>=13.9.0",
    "pillow>=10.0.0",
    "torch>=2.5.0",
    "torchvision>=0.20.0",
]

[project.scripts]
ovo-sidecar = "ovo_sidecar.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ovo_sidecar"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "pyinstaller>=6.11.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
